--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Criptomonedas</string>
+    <string name="active">activo</string>
+    <string name="inactive">inactivo</string>
 </resources>
